added submit button in form

--- a/class5/index.html
+++ b/class5/index.html
@@ -43,12 +43,14 @@
 		<br>
 		<label for="telephone">Telephone</label>
 		<input type="tel" name="telephone" id="telephone">
-
+<br>
 		<input type="radio" name="gender" id="">Male
 		<input type="radio" name="gender" id="">Female
-
+<br>
 		<input type="checkbox" name="subject" id="">Computer
 		<input type="checkbox" name="subject" id="">Math
+		<br>
+		<button type="submit">Save</button>
 	</form>
 
 	<h1>Mark Sheet</h1>
