--- a/class5/index.html
+++ b/class5/index.html
@@ -4,32 +4,10 @@
 <head>
 	<title>NFTP NED Technical</title>
 	<meta name="description" content="this is a test html for learning purpose">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-	<style>
-		table {
-			width: 100%;
-			margin: 5px 10px 15px 20px;
-			background: #5e9bf7;
-			color: #6127e7;
-		}
-
-		table,
-		th,
-		td {
-			text-align: left;
-			border: solid 1px #ff0000;
-			border-collapse: collapse;
-		}
-
-		th,
-		td {
-			padding: 5px 100px;
-		}
-	</style>
-
 	<h1>Bio Data</h1>
 	<form action="">
 		<label for="Name">Name </label>
@@ -96,11 +74,12 @@
 	</table>
 
 
-	This is a <tt>demo</tt> html page
-	<big>M</big>Microsoft <small>V</small>isual studio code
+	<p class="special-para mota-text">This is a <tt>demo</tt> html page
+		<big>M</big>Microsoft <small>V</small>isual studio code
+	</p>
 	<h1><a name="Heading1">Heading 1</a> </h1>
 
-	<p>
+	<p class="special-para">
 		this is a sample of <sup>Super</sup>Script
 		this is my 1<sup>st</sup> assignment
 		This is my <del>mistake</del>
