--- a/class6/index.html
+++ b/class6/index.html
@@ -5,6 +5,7 @@
 	<title>NFTP NED Technical</title>
 	<meta name="description" content="this is a test html for learning purpose">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
